// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Option should match snapshot 1`] = `
<Option__StyledOption
  duration={200}
>
  <Option__LabelField
    id="label"
  >
    <Option__DummyInput />
    <Option__SeamlessLabel
      onBlur={[Function]}
      onChange={[Function]}
      placeholder="Label"
      size="medium"
      value=""
    />
  </Option__LabelField>
  <Field
    id="description"
  >
    <withSeamlessness(withChangeHandler(WrappingTextArea))
      onBlur={[Function]}
      onChange={[Function]}
      placeholder="Optional description"
      size="small"
      value=""
    />
  </Field>
  <Option__DeleteContainer>
    <Tooltip
      content="Delete option"
    >
      <DeleteButton
        aria-label="Delete option"
        onClick={[Function]}
        size="small"
        type="button"
      />
    </Tooltip>
  </Option__DeleteContainer>
</Option__StyledOption>
`;

exports[`Option shouldn't render delete button if not applicable 1`] = `
<Option__StyledOption
  duration={200}
>
  <Option__LabelField
    id="label"
  >
    <Option__DummyInput />
    <Option__SeamlessLabel
      onBlur={[Function]}
      onChange={[Function]}
      placeholder="Label"
      size="medium"
      value=""
    />
  </Option__LabelField>
  <Field
    id="description"
  >
    <withSeamlessness(withChangeHandler(WrappingTextArea))
      onBlur={[Function]}
      onChange={[Function]}
      placeholder="Optional description"
      size="small"
      value=""
    />
  </Field>
</Option__StyledOption>
`;
